Getting popular movies and in theater movies

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://bootswatch.com/solar/bootstrap.min.css">
+	<link rel="stylesheet" href="styles.css">
 	
 	<!-- Polyfill(s) for older browsers -->
 	<script src="node_modules/core-js/client/shim.min.js"></script>
